Added UI for a developer to set role and patterns. Consolidated various functions in am.php.

--- a/surveyStyle.css
+++ b/surveyStyle.css
@@ -36,7 +36,7 @@ body {
     margin-bottom: 1vh;
     margin-top: 1vh;
 }
-input, textarea {
+input[type="text"], textarea {
     background-color: #ffc;
     border-radius: .8vh;
 }
